0.0.1
Added simple form box.
Added item box.
Added input box.
Updated default options.
1st commit.
Started message boxes.